--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Asistente Vial</string>
     <string name="title_home">Inicio</string>
-    <string name="title_dashboard">Temas</string>
+    <string name="title_dashboard">Examen</string>
     <string name="title_notifications">Notificaciones</string>
     <string name="title_subtemas">Subtemas</string>
     <string name="title_preguntas">Preguntas</string>
-    <string name="title_temas">Temas</string>
+    <string name="title_temas">Examen</string>
     <string name="title_home2">Inicio</string>
 
     <string name="titulo_notificacion">Recordatorio de estudio</string>
