--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,13 @@
     <string name="channel_id">EGEL ISOFT PLUS</string>
 
 
+    <string name="requisitos">Agendar cita por telefono o en educacion vial
+Realizar curso de manejo y examen teórico-práctico
+Acta de nacimiento
+Comprobante de domicilio a su nombre no mayor a tres meses (agua, luz, telefono, fijo, gas o predial).
+Encaso de no contar con recibo a su nombre, anexar a este; edo. de cuenta bancario, tienda departamental a nombre del interesado
+Identificación oficial con fotrografía (INE, pasaporte mexicano vigente, cartilla militar(no mayor a 5 años); menores de edad: tener 16 añoscumplidos, credencial escolar vigente o pasaporte mexicano vigente acompañado de padre o tutor legal con identificación oficial
+Traer lapiz, borrador y comprobante de pago del curso</string>
+
+
 </resources>
